# ttsvowelviz

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/ttsvowelviz/: __init__.py  _core.py  _synthesizer.py
src/ttsvowelviz/forced_aligner/: __init__.py  _forced_aligner.py  _web_maus_basic_aligner.py
src/ttsvowelviz/formant_extractor/: __init__.py  _formant_extractor.py  _praat_formant_extractor.py
src/ttsvowelviz/utils/: __init__.py  _language.py  _logger.py  _segment.py  constants.py
src/ttsvowelviz/vowel_space/: __init__.py  _dynamic_vowel_space.py  _static_vowel_space.py  _vowel_space.py
